jade-shooter-ingress-kyaml.yaml
{
  apiVersion: "networking.k8s.io/v1",
  kind: "Ingress",
  metadata: {
    name: "jade-shooter"
  },
  spec: {
    rules: [
      {
        host: "jade-shooter.rancher.localhost",
        http: {
          paths: [
            {
              pathType: "Prefix",
              path: "/",
              backend: {
                service: {
                  name: "jade-shooter-service",
                  port: { number: 8080 }
                }
              }
            }
          ]
        }
      }
    ],
    tls: [
      {
        hosts: [
          "jade-shooter.rancher.localhost"
        ]
      }
    ]
  }
}
