jade-shooter-ingress-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jade-shooter
spec:
  defaultBackend:
    service:
      name: jade-shooter-service
      port:
        number: 8080
  ingressClassName: tailscale     ### this is important
  tls:
  - hosts:
    - jade-shooter                ### subdomain for your tailnet domain
                                  ### example: jade-shooter.degu-gentoo.ts.net
